--- a/Debug/makefile
+++ b/Debug/makefile
@@ -65,8 +65,8 @@ all: main-build
 main-build: FreeRTOS_stm32F401.elf secondary-outputs
 
 # Tool invocations
-FreeRTOS_stm32F401.elf: $(OBJS) $(USER_OBJS) C:\Users\Jerrychou\Desktop\Project\ -\ stm32F401\FreeRTOS_stm32F401\STM32F401RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "FreeRTOS_stm32F401.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Jerrychou\Desktop\Project - stm32F401\FreeRTOS_stm32F401\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FreeRTOS_stm32F401.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+FreeRTOS_stm32F401.elf: $(OBJS) $(USER_OBJS) C:\Users\Jerrychou\Desktop\workspace_stm32f401\FreeRTOS_stm32F401\STM32F401RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "FreeRTOS_stm32F401.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Jerrychou\Desktop\workspace_stm32f401\FreeRTOS_stm32F401\STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FreeRTOS_stm32F401.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
